Encrypt password & Dashboard